2009-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/hpgl.trm term/tgif.trm term/gd.trm:
	Fix illegal memory access violations found by valgrind.

2009-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image print_five_operand_image): Fix
	related to the patch of post.trm from 2009-01-26: images drawn
	"with rgbimage" must always be drawn as rgb colour images.
	SF Patch #2613919: postscript outputs colour RGB as palette image

2009-02-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_text_angle): Force angle to fall in the range
	[-pi/2 : pi/2].  Reported to avoid problems in some versions of libgd.

2009-02-16  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/titlepag.tex docs/gnuplot.doc term/cgm.trm:
	Remove duplicate keyword entries. Put version number on title page.

2009-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/all.dem demo/heatmaps.dem:  Add heat maps to demo set.

2009-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: Use $(CC) instead of gcc to compile pgnuplot.

2009-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_options): Call term->init() rather than X11_init(),
	since the options routine is shared by x11 and xlib drivers.

2009-02-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (type_udv) src/eval.c (add_udv_by_name) src/fit.c
	src/plot2d.c: Prevent strange behaviour due to uninitialized field
	udv_type in a udv entry that has been created but not yet defined.
	Bug #2556225

	* src/graph3d.c (draw_3d_graphbox): Allow Z axis label in 3D plots
	to be rotated.

2009-02-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (lookup_key): Use exact match, otherwise F10, F11, or F12
	hotkeys bind to F1.

2009-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/breaders.c (edf_filetype_function): Fix for long headers.

2009-01-27  Petr Mikulik  <mikulik@physics.muni.cz>
